--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -35,6 +35,8 @@
   description={Derived allele frequency}
 }
 
+\newacronym[description={Genetic relationship matrix}]{grm}{GRM}{genetic relationship matrix}
+
 \newacronym[description={False discovery rate}]{fdr}{FDR}{false discovery rate}
 
 \newacronym[description={Principle components analysis}]{pca}{PCA}{principle components analysis}
