--- a/references.bib
+++ b/references.bib
@@ -3428,3 +3428,40 @@ volume = {77},
 year = {2015}
 }
 
+@article{Pagani2016,
+abstract = {Previous human genetic studies, based on sampling small numbers of populations, have supported a recent Out-of-Africa dispersal model with minor additional input from archaic humans. Here, we present a novel dataset of 379 high-coverage human genomes from 125 populations worldwide. The combination of high spatial and genomic coverage enabled us to refine current knowledge of continent-wide patterns of heterozygosity, long- and short-distance gene flow, archaic admixture, and changes in effective population size. Compared to Eurasians, the examined Papuan genomes show an excess of highly derived modern human haplotypes and deeper split times from Africans. This is compatible with traces of an early and otherwise extinct expansion of modern humans Out-of-Africa, as also suggested by the Western Asian fossil record and the recent discovery of modern human and Neanderthal admixture 100 000 years ago which significantly predates the main Out of Africa expansion of modern humans. Our tests of positive and balancing selection highlight a number of new metabolism- and immunity-related loci as candidates for local adaptation.},
+archivePrefix = {arXiv},
+arxivId = {NIHMS150003},
+author = {Pagani, L and Lawson, JD and Jagoda, E and M{\"{o}}rseburg, A and Clemente, F and Hudjashov, G and DeGiorgio, M and Eriksson, A and Saag, L and Wall, JD. and Cardona, A and M{\"{a}}gi, R and Sayres, MA. Wilson and Kaewert, S and Inchley, C and Scheib, CL. and J{\"{a}}rve, M and Karmin, M and Jacobs, GS. and Antao, T and Iliescu, FM and Kushniarevich, A and Ayub, Q and Tyler-Smith, C and Xue, Y and Yunusbayev, B and Tambets, K and MC, Basu and Saag, L and Pocheshkhova, E and Andriadze, G and Muller, C and Westaway, MC. and Lambert, D and Zoraqi, G and Turdikulova, S and Dalimova, D and Sabitov, Z and NGS, Nurun and Lachance, J and Tishkoff, S and Momynaliev, K and Isakova, J and Damba, LD and Gubina, M and Nymadawa, P and Evseeva, I and Atramentova, L and Utevska, O and FX, Ricaut and Razafindrazaka, H and Sudoyo, H and Letellier, T and Cox, MP and Barashkov, NA. and Skaro, Vedrana and Mulahasanovic, Lejla and Primorac, Dragan and Sahakyan, H and Mormina, M and Eichstaedt, CA. and Lichman, DV. and Abdullah, S and Chaubey, G and Wee, Joseph TS and Mihailov, E and Karunas, A and Litvinov, S and Khusainova, R and Ekomasova, N and Akhmetova, V and Khidiyatova, I and Marjanovic, Damir and Yepiskoposyan, L and Behar, DM and Balanovska, E and Metspalu, A and Derenko, M and Malyarchuk, B and Voevoda, M and Fedorova, SA and Osipova, LP and LM, Miraz{\'{o}}n and Gerbault, P and Leavesley, M and M, Andrea Bamberg and Petraglia, M and Balanovsky, O and Khusnutdinova, EK. and Metspalu, E and Thomas, MG. and Manica, A and Nielsen, R and Villems, R and Willerslev, E and Kivisild, T and Metspalu, M.},
+doi = {10.1038/nature19792},
+eprint = {NIHMS150003},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pagani et al. - 2016 - Geographical barriers, environmental challenges, and complex migration events during the peopling of Eurasia.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pagani et al. - 2016 - Geographical barriers, environmental challenges, and complex migration events during the peopling of Eurasia(2).pdf:pdf},
+isbn = {0008-5472 (Print)$\backslash$r0008-5472 (Linking)},
+issn = {0028-0836},
+journal = {Nature},
+keywords = {OoA,archaic admixture,gene flow,haplotypes,heterozygosity,population study},
+mendeley-groups = {Migration},
+mendeley-tags = {OoA},
+pmid = {11507039},
+title = {{Geographical barriers, environmental challenges, and complex migration events during the peopling of Eurasia}},
+year = {2016}
+}
+
+@article{Price2006,
+abstract = {Population stratification--allele frequency differences between cases and controls due to systematic ancestry differences-can cause spurious associations in disease studies. We describe a method that enables explicit detection and correction of population stratification on a genome-wide scale. Our method uses principal components analysis to explicitly model ancestry differences between cases and controls. The resulting correction is specific to a candidate marker's variation in frequency across ancestral populations, minimizing spurious associations while maximizing power to detect true associations. Our simple, efficient approach can easily be applied to disease studies with hundreds of thousands of markers.},
+author = {Price, Alkes L and Patterson, Nick J and Plenge, Robert M and Weinblatt, Michael E and Shadick, Nancy A and Reich, David},
+doi = {10.1038/ng1847},
+file = {:home/murraycadzow/Dropbox/Papers/ng1847.pdf:pdf},
+isbn = {1061-4036 (Print)$\backslash$r1061-4036 (Linking)},
+issn = {1061-4036},
+journal = {Nature Genetics},
+keywords = {Algorithms,Alleles,Case-Control Studies,Databases,Genetic Markers,Genome,Genomics/*statistics {\&} numerical data,Genotype,Human,Humans,Nucleic Acid,Phenotype,Polymorphism,Principal Component Analysis,Single Nucleotide},
+month = {aug},
+number = {8},
+pages = {904--909},
+pmid = {16862161},
+title = {{Principal components analysis corrects for stratification in genome-wide association studies}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/16862161 http://www.nature.com/doifinder/10.1038/ng1847},
+volume = {38},
+year = {2006}
+}
